--- a/forge2d_game/step_03/pubspec.yaml
+++ b/forge2d_game/step_03/pubspec.yaml
@@ -10,9 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
   characters: ^1.4.0
-  flame: ^1.28.0
-  flame_forge2d: ^0.19.0
-  flame_kenney_xml: ^0.1.1+10
+  flame: ^1.28.1
+  flame_forge2d: ^0.19.0+1
+  flame_kenney_xml: ^0.1.1+11
   xml: ^6.5.0
 
 dev_dependencies:
